# PythonProject2

./: .editorconfig  .gitignore  29ec526b-912a-457f-a8b0-04f7cbaaaf1b.xml  ABSOLUTE_LAUNCH.bat  ABSOLUTE_LAUNCH.py  ABSOLUTE_STATUS.md  AUTONOMOUS_LAUNCH.bat  AUTONOMOUS_OPERATION_RESTORED.md  AUTONOMOUS_STATUS.md  AUTO_DEPLOY_STARTUP.bat  BIOCOMPUTING_CORE.py  BIOCOMPUTING_CORE_RESTORED.md  BIOCOMPUTING_ONLINE_OFFLINE.md  BUILD_SUMMARY.txt  CELESTIAL_ENHANCEMENTS.md  COMPONENT_INTERACTIONS.md  DEPLOYMENT_README.md  DEPLOY_THALOS_PRIME.bat  DEVELOPMENT_GUIDE.md  DOCUMENTATION_INDEX.md  DUAL_INTERFACE_GUIDE.md  EXECUTION_COMPLETE.md  FILE_INDEX.md  FILE_INDEX_COMPLETE.md  GETTING_STARTED.txt  HYPER_NEXTUS_DEPLOY.bat  HYPER_NEXTUS_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_SUMMARY.md  INDIGENOUS_AI_DOCUMENTATION.txt  INSTANT_LAUNCH.bat  INTERFACE_UPGRADE_SUMMARY.txt  LAUNCH_STATUS.md  LAUNCH_THALOS_PRIME.bat  LAUNCH_THALOS_UNIFIED.bat  MASTER_DEPLOY.bat  NY_ANALYSIS_QUICKSTART.txt  NY_ANALYSIS_README.md  PERFORMANCE_OPTIMIZATIONS.md  (+143 more)
ProblemsWithCode/: Annotator.xml  CssRedundantUnit.xml  CssUnusedSymbol.xml  DuplicatedCode.xml  DuplicatedCode_aggregate.xml  ExceptionCaughtLocallyJS.xml  GrazieInspection.xml  GrazieStyle.xml  HtmlFormInputWithoutLabel.xml  HttpUrlsUsage.xml  IncorrectFormatting.xml
src/thalos_prime/: __init__.py  cli.py
tests/: test_smoke.py  test_thalos_coding_agent_core.py
tools/: find_free_port.py
